cabal-version:  2.2
name:           liszt
version:        0.2.0.1
synopsis:       Append only key-list database
description:    Please see the README on GitHub at <https://github.com/fumieval/liszt#readme>
category:       Database
homepage:       https://github.com/fumieval/liszt#readme
bug-reports:    https://github.com/fumieval/liszt/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2018 Fumiaki Kinoshita
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/fumieval/liszt

common deps
  build-depends:
      base >=4.7 && <5
    , binary
    , bytestring
    , cereal
    , containers
    , cpu
    , deepseq
    , directory
    , exceptions
    , filepath
    , fsnotify
    , mmap
    , network
    , reflection
    , scientific
    , sendfile
    , stm
    , stm-delay
    , text
    , transformers
    , unordered-containers
    , vector
    , vector-th-unbox
    , mason
    , winery

library
  import: deps
  exposed-modules:
      Database.Liszt
      Database.Liszt.Tracker
      Database.Liszt.Internal
      Database.Liszt.Network
      Database.Liszt.Static
  other-modules:
      Database.Liszt.Internal.Decoder
      Paths_liszt
  hs-source-dirs:
      src
  default-language: Haskell2010
  default-extensions:
    DerivingVia
    StandaloneDeriving

executable liszt
  import: deps
  main-is: client.hs
  build-depends: liszt
  other-modules:
      Paths_liszt
  hs-source-dirs:
      app
  default-language: Haskell2010

executable lisztd
  main-is: server.hs
  other-modules:
      Paths_liszt
  hs-source-dirs:
      app
  ghc-options: -threaded -O2
  build-depends:
      base >=4.7 && <5
    , binary
    , bytestring
    , cereal
    , containers
    , cpu
    , deepseq
    , directory
    , exceptions
    , filepath
    , fsnotify
    , liszt
    , mmap
    , network
    , reflection
    , scientific
    , sendfile
    , stm
    , stm-delay
    , text
    , transformers
    , unordered-containers
    , vector
    , vector-th-unbox
  default-language: Haskell2010

benchmark bench
  import: deps
  type: exitcode-stdio-1.0
  main-is: bench.hs
  other-modules:
      Paths_liszt
  hs-source-dirs:
      benchmarks
  ghc-options: -O2
  default-language: Haskell2010
